network: Fix empty Wifi list

Add a callback function for signals "access-point-added" and
"access-point-removed" to update the Wifi list.

https://bugzilla.gnome.org/show_bug.cgi?id=709641